--- a/src/app/user-view/user-view.component.html
+++ b/src/app/user-view/user-view.component.html
@@ -1,52 +1,76 @@
-<button mat-fab color="primary" class="floating-add-button" (click)="goToNewRequest()">
-  <mat-icon>add</mat-icon>
-</button>
+<div class="relative-container">
+  <button mat-fab color="primary" class="floating-add-button" (click)="goToNewRequest()">
+    <mat-icon>add</mat-icon>
+  </button>
 
-<mat-paginator [length]="resultsLength" [pageSize]="20"></mat-paginator>
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+  <!-- <mat-paginator [length]="resultsLength" [pageSize]="20"></mat-paginator> -->
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" multiTemplateDataRows>
 
-  <!-- ID Column -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Id. </th>
-    <td mat-cell *matCellDef="let element">{{element.id}}</td>
-  </ng-container>
+    <!-- ID Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id. </th>
+      <td mat-cell *matCellDef="let element">{{element.id}}</td>
+    </ng-container>
 
-  <!-- Creation Date Column -->
-  <ng-container matColumnDef="fechaCreacion">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
-    <td mat-cell *matCellDef="let element">{{element.fechaCreacion | date }}</td>
-  </ng-container>
+    <!-- Creation Date Column -->
+    <ng-container matColumnDef="fechaCreacion">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
+      <td mat-cell *matCellDef="let element">{{element.fechaCreacion | date }}</td>
+    </ng-container>
 
-  <!-- Start Date Column -->
-  <ng-container matColumnDef="fechaInicio">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-    <td mat-cell *matCellDef="let element">{{element.fechaInicio | date}}</td>
-  </ng-container>
+    <!-- Start Date Column -->
+    <ng-container matColumnDef="fechaInicio">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
+      <td mat-cell *matCellDef="let element">{{element.fechaInicio | date}}</td>
+    </ng-container>
 
-  <!-- Start Date Column -->
-  <ng-container matColumnDef="horaInicio">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Hour </th>
-    <td mat-cell *matCellDef="let element">{{element.horaInicio}}</td>
-  </ng-container>
+    <!-- Start Date Column -->
+    <ng-container matColumnDef="horaInicio">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Hour </th>
+      <td mat-cell *matCellDef="let element">{{element.horaInicio}}</td>
+    </ng-container>
 
-  <!-- Finish Date Column -->
-  <ng-container matColumnDef="fechaFin">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Finish Date </th>
-    <td mat-cell *matCellDef="let element">{{element.fechaFin | date}}</td>
-  </ng-container>
+    <!-- Finish Date Column -->
+    <ng-container matColumnDef="fechaFin">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Finish Date </th>
+      <td mat-cell *matCellDef="let element">{{element.fechaFin | date}}</td>
+    </ng-container>
 
-  <!-- Finish Date Column -->
-  <ng-container matColumnDef="horaFin">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Finish Hour </th>
-    <td mat-cell *matCellDef="let element">{{element.horaFin}}</td>
-  </ng-container>
+    <!-- Finish Date Column -->
+    <ng-container matColumnDef="horaFin">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Finish Hour </th>
+      <td mat-cell *matCellDef="let element">{{element.horaFin}}</td>
+    </ng-container>
 
-  <!-- Finish Date Column -->
-  <ng-container matColumnDef="estado">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-    <td mat-cell *matCellDef="let element">{{element.estado}}</td>
-  </ng-container>
+    <!-- Finish Date Column -->
+    <ng-container matColumnDef="estado">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+      <td mat-cell *matCellDef="let element">{{element.estado}}</td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+
+    <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+    <ng-container matColumnDef="expandedDetail">
+      <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+          <div class="example-element-diagram">
+            <div class="example-element-position"> {{element.position}} </div>
+            <div class="example-element-symbol"> {{element.symbol}} </div>
+            <div class="example-element-name"> {{element.name}} </div>
+            <div class="example-element-weight"> {{element.weight}} </div>
+          </div>
+          <div class="example-element-description">
+            {{element.description}}
+            <span class="example-element-description-attribution"> -- Wikipedia </span>
+          </div>
+        </div>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row" [class.example-expanded-row]="expandedElement === element"
+      (click)="expandedElement = element">
+    </tr>
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+  </table>
+</div>
