new services, modularized material modules, backend services first draft

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -29,17 +29,15 @@
           <!-- <button mat-button>{{dayCol}}</button> -->
         <mat-card class="calendar-card">
           <mat-card-header>
-            <mat-card-title>{{dayCol}}</mat-card-title>
+            <mat-card-title >{{dayCol}}</mat-card-title>
           </mat-card-header>
           <mat-card-content>
-            <p>
-              Notificaciones!
-            </p>
+            <mat-chip-list>
+              <mat-chip  color="primary" selected>
+                
+              </mat-chip>
+            </mat-chip-list>
           </mat-card-content>
-          <mat-card-actions class="calendar-actions">
-            <button mat-button>Ver</button>
-            <button mat-button>Modificar</button>
-          </mat-card-actions>
         </mat-card>
       </td>
     </tr>
