--- a/src/app/user-view/user-view.component.html
+++ b/src/app/user-view/user-view.component.html
@@ -53,7 +53,7 @@
     <ng-container matColumnDef="expandedDetail">
       <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
         <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-          <div class="example-element-diagram">
+          <!-- <div class="example-element-diagram">
             <div class="example-element-position"> {{element.position}} </div>
             <div class="example-element-symbol"> {{element.symbol}} </div>
             <div class="example-element-name"> {{element.name}} </div>
@@ -61,7 +61,9 @@
           </div>
           <div class="example-element-description">
             {{element.description}}
-            <span class="example-element-description-attribution"> -- Wikipedia </span>
+            <span class="example-element-description-attribution"> -- Wikipedia </span> -->
+          <div>
+
           </div>
         </div>
       </td>
