--- a/src/app/user-view/user-view.component.html
+++ b/src/app/user-view/user-view.component.html
@@ -9,43 +9,44 @@
     <!-- ID Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Id. </th>
-      <td mat-cell *matCellDef="let element">{{element.id}}</td>
+      <td mat-cell *matCellDef="let element">{{element.Id}}</td>
     </ng-container>
 
-    <!-- Creation Date Column -->
+    <!-- Creation Date Column 
     <ng-container matColumnDef="fechaCreacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
       <td mat-cell *matCellDef="let element">{{element.fechaCreacion | date }}</td>
     </ng-container>
+    -->
 
     <!-- Start Date Column -->
     <ng-container matColumnDef="fechaInicio">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-      <td mat-cell *matCellDef="let element">{{element.fechaInicio | date}}</td>
+      <td mat-cell *matCellDef="let element">{{element.PACDateFrom | date}}</td>
     </ng-container>
 
     <!-- Start Date Column -->
     <ng-container matColumnDef="horaInicio">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Hour </th>
-      <td mat-cell *matCellDef="let element">{{element.horaInicio}}</td>
+      <td mat-cell *matCellDef="let element">{{element.PACHourFrom}}</td>
     </ng-container>
 
     <!-- Finish Date Column -->
     <ng-container matColumnDef="fechaFin">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Finish Date </th>
-      <td mat-cell *matCellDef="let element">{{element.fechaFin | date}}</td>
+      <td mat-cell *matCellDef="let element">{{element.PACDateTo | date}}</td>
     </ng-container>
 
     <!-- Finish Date Column -->
     <ng-container matColumnDef="horaFin">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Finish Hour </th>
-      <td mat-cell *matCellDef="let element">{{element.horaFin}}</td>
+      <td mat-cell *matCellDef="let element">{{element.PACHourTo}}</td>
     </ng-container>
 
     <!-- Finish Date Column -->
     <ng-container matColumnDef="estado">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-      <td mat-cell *matCellDef="let element">{{element.estado}}</td>
+      <td mat-cell *matCellDef="let element">{{element.PACRequestStatus}}</td>
     </ng-container>
 
 
@@ -53,16 +54,10 @@
     <ng-container matColumnDef="expandedDetail">
       <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
         <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-          <!-- <div class="example-element-diagram">
-            <div class="example-element-position"> {{element.position}} </div>
-            <div class="example-element-symbol"> {{element.symbol}} </div>
-            <div class="example-element-name"> {{element.name}} </div>
-            <div class="example-element-weight"> {{element.weight}} </div>
-          </div>
+          <app-request-view>
+
+          </app-request-view>
           <div class="example-element-description">
-            {{element.description}}
-            <span class="example-element-description-attribution"> -- Wikipedia </span> -->
-          <div>
 
           </div>
         </div>
