--- a/src/app/admin-view/admin-view.component.html
+++ b/src/app/admin-view/admin-view.component.html
@@ -6,43 +6,46 @@
     <td mat-cell *matCellDef="let element">{{element.id}}</td>
   </ng-container>
 
-  <!-- Creation Date Column -->
+  <!-- Creation Date Column 
+    
   <ng-container matColumnDef="fechaCreacion">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
-    <td mat-cell *matCellDef="let element">{{element.fechaCreacion | date }}</td>
-  </ng-container>
+    <td mat-cell *matCellDef="let element">{{element.PACDateFrom | date }}</td>
+  </ng-container> 
+-->
 
   <!-- Start Date Column -->
   <ng-container matColumnDef="fechaInicio">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-    <td mat-cell *matCellDef="let element">{{element.fechaInicio | date}}</td>
+    <td mat-cell *matCellDef="let element">{{element.PACDateFrom | date}}</td>
   </ng-container>
 
   <!-- Start Date Column -->
   <ng-container matColumnDef="horaInicio">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Hour </th>
-    <td mat-cell *matCellDef="let element">{{element.horaInicio}}</td>
+    <td mat-cell *matCellDef="let element">{{element.PACHourFrom}}</td>
   </ng-container>
 
   <!-- Finish Date Column -->
   <ng-container matColumnDef="fechaFin">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Finish Date </th>
-    <td mat-cell *matCellDef="let element">{{element.fechaFin | date}}</td>
+    <td mat-cell *matCellDef="let element">{{element.PACDateTo | date}}</td>
   </ng-container>
 
   <!-- Finish Date Column -->
   <ng-container matColumnDef="horaFin">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Finish Hour </th>
-    <td mat-cell *matCellDef="let element">{{element.horaFin}}</td>
+    <td mat-cell *matCellDef="let element">{{element.PACHourTo}}</td>
   </ng-container>
 
-  <!-- Finish Date Column -->
+  <!-- Finish Date Column 
   <ng-container matColumnDef="estado">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-    <td mat-cell *matCellDef="let element">{{element.estado}}</td>
+    <td mat-cell *matCellDef="let element">{{element.PACRequestStatus}}</td>
   </ng-container>
+  -->
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="goToRequestResponse()"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="goToRequestResponse(row)"></tr>
 </table>
-  <mat-paginator [length]="resultsLength" [pageSize]="20"></mat-paginator>
+<mat-paginator [length]="resultsLength" [pageSize]="20"></mat-paginator>
