--- a/src/app/admin-view/requests/request-response.component.css
+++ b/src/app/admin-view/requests/request-response.component.css
@@ -18,4 +18,20 @@
   .example-full-width {
     width: 100%;
   }
+
+  .flex-col {
+    /* min-width: 150px;
+   max-width: 500px;
+   width: 100%;
+   text-align: center;
+   margin: 0 auto;
+   */
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+ }
+
+ .btn-group {
+   text-align: right;
+ }
   
