--- a/src/app/admin-view/requests/request-response.component.html
+++ b/src/app/admin-view/requests/request-response.component.html
@@ -1,13 +1,20 @@
 <mat-card class="example-card">
     <mat-card class="example-card">
-        <app-request-view>
+        <app-request-view [request]="requestToRespond">
         </app-request-view>
     </mat-card>
-
-    <mat-form-field class="example-full-width">
-        <textarea matInput placeholder="Reason"></textarea>
-    </mat-form-field>
-
-    <button mat-raised-button color="primary" (click)="approve()">Approve</button>
-    <button mat-raised-button color="primary" (click)="deny()">Deny</button>
+    <mat-card class="example-card">
+        <mat-card-title>
+            Response
+        </mat-card-title>
+        <form class="flex-col">
+            <mat-form-field class="example-full-width">
+                <textarea name="PACReason" matInput placeholder="Reason" [(ngModel)]="response.PACResponseReason"></textarea>
+            </mat-form-field>
+            <div class="btn-group">
+                <button mat-raised-button color="primary" (click)="approve()">Approve</button>
+                <button mat-raised-button color="warn" (click)="deny()">Deny</button>
+            </div>
+        </form>
+    </mat-card>
 </mat-card>
