--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,10 +5,13 @@
   <!-- This fills the remaining space of the current row -->
   <span class="example-fill-remaining-space"></span>
   <div class="button-row">
-    <button mat-button (click)="viewUserRequests()">My Requests</button> 
-    <button *ngIf="isAdmin" mat-button (click)="viewAdminRequests()">User Requests</button>
-    <button mat-icon-button (click)="viewCalendar()">
+    <button mat-button (click)="viewUserRequests()">My Requests</button>
+    <button *ngIf="isManager" mat-button (click)="viewAdminRequests()">User Requests</button>
+    <button *ngIf="isRRHH" mat-button (click)="viewAdminRequests()">Approved Requests</button>
+    <!-- 
+      <button mat-icon-button (click)="viewCalendar()">
         <mat-icon  matBadge="22" matBadgeColor="warn">event</mat-icon>
       </button>
+      -->
   </div>
 </mat-toolbar>
