--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
   <div class="button-row">
     <button mat-button (click)="viewUserRequests()">My Requests</button>
     <button *ngIf="isManager" mat-button (click)="viewAdminRequests()">User Requests</button>
-    <button *ngIf="isRRHH" mat-button (click)="viewAdminRequests()">Approved Requests</button>
+    <button *ngIf="isRRHH" mat-button (click)="viewHRRequests()">Approved Requests</button>
     <!-- 
       <button mat-icon-button (click)="viewCalendar()">
         <mat-icon  matBadge="22" matBadgeColor="warn">event</mat-icon>
