--- a/src/app/admin-view/requests/request-response.component.html
+++ b/src/app/admin-view/requests/request-response.component.html
@@ -7,14 +7,14 @@
         <mat-card-title>
             Response
         </mat-card-title>
-        <form class="flex-col">
+        <form class="flex-col" #responseForm="ngForm">
             <mat-form-field class="example-full-width">
                 <textarea name="PACReason" matInput placeholder="Reason" [(ngModel)]="response.PACResponseReason" required></textarea>
             </mat-form-field>
             <div class="btn-group">
-                <button mat-raised-button (click)="sendBack()">Send back</button>
-                <button mat-raised-button color="primary" (click)="approve()">Approve</button>
-                <button mat-raised-button color="warn" (click)="deny()">Deny</button>
+                <button mat-raised-button type="button" [disabled]="!responseForm.valid" (click)="sendBack()">Send back</button>
+                <button mat-raised-button  type="button" color="primary" [disabled]="!responseForm.valid" (click)="approve()">Approve</button>
+                <button mat-raised-button type="button"  color="warn"  [disabled]="!responseForm.valid" (click)="deny()">Deny</button>
             </div>
         </form>
     </mat-card>
