--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     {{currentSite}}
   </span>
   <!-- This fills the remaining space of the current row -->
-  <span class="example-fill-remaining-space"></span>
+  <span class="fill-space"></span>
   <div class="button-row">
     <button mat-button (click)="viewUserRequests()">My Requests</button>
     <button *ngIf="isManager" mat-button (click)="viewAdminRequests()">User Requests</button>
