--- a/src/app/admin-view/requests/request-response.component.html
+++ b/src/app/admin-view/requests/request-response.component.html
@@ -1,14 +1,14 @@
-<mat-card class="example-card">
-    <mat-card class="example-card">
+<mat-card class="card-container">
+    <mat-card class="card-container">
         <app-request-view [request]="requestToRespond">
         </app-request-view>
     </mat-card>
-    <mat-card class="example-card">
+    <mat-card class="card-container">
         <mat-card-title>
             Response
         </mat-card-title>
         <form class="flex-col" #responseForm="ngForm">
-            <mat-form-field class="example-full-width">
+            <mat-form-field class="full-width">
                 <textarea name="PACReason" matInput placeholder="Reason" [(ngModel)]="response.PACResponseReason" required></textarea>
             </mat-form-field>
             <div class="btn-group">
