--- a/src/app/human-resources/final-report-view/final-report-view.component.html
+++ b/src/app/human-resources/final-report-view/final-report-view.component.html
@@ -11,7 +11,7 @@
   </tbody>
 </table>
 <form class="flex-col" #finalResponse="ngForm" >
-  <mat-form-field class="example-full-width">
+  <mat-form-field class="full-width">
     <textarea name="PACReason" matInput placeholder="Reason" [(ngModel)]="request.PACHRResponse" required></textarea>
   </mat-form-field>
   <div class="btn-group">
