--- a/src/app/user-view/new-request/new-request.component.html
+++ b/src/app/user-view/new-request/new-request.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<mat-card class="card-container">
   <mat-card-title>
     Create a Request
   </mat-card-title>
@@ -56,7 +56,7 @@
     <mat-list>
       <mat-list-item *ngFor="let attachment of request.Attachments; let index = index">
           <a>{{attachment.fileName}}</a>
-        <span class="example-fill-remaining-space"></span>
+        <span class="fill-space"></span>
         <button type="button" (click)="removeAttachment(index)" mat-icon-button>
           <mat-icon>clear</mat-icon>
         </button>
