--- a/src/app/user-view/user-view.component.css
+++ b/src/app/user-view/user-view.component.css
@@ -1,30 +1,26 @@
-table {
-  width: 100%;
-}
-
 .floating-add-button {
   position: absolute;
   bottom: 5px;
   right: 5px;
 }
 
-tr.example-detail-row {
+tr.detail-row {
   height: 0;
 }
 
-tr.example-element-row:not(.example-expanded-row):hover {
+tr.-element-row:not(.example-expanded-row):hover {
   background: #f5f5f5;
 }
 
-tr.example-element-row:not(.example-expanded-row):active {
+tr.element-row:not(.example-expanded-row):active {
   background: #efefef;
 }
 
-.example-element-row td {
+.element-row td {
   border-bottom-width: 0;
 }
 
-.example-element-detail {
+.expanded-element-detail {
   overflow: hidden;
   display: flex;
 }
@@ -34,28 +30,6 @@ tr.example-element-row:not(.example-expanded-row):active {
   min-height: 200px;
 }
 
-.example-element-diagram {
-  min-width: 80px;
-  border: 2px solid black;
-  padding: 8px;
-  font-weight: lighter;
-  margin: 8px 0;
-  height: 104px;
-}
-
-.example-element-symbol {
-  font-weight: bold;
-  font-size: 40px;
-  line-height: normal;
-}
-
-.example-element-description {
-  padding: 16px;
-}
-
-.example-element-description-attribution {
-  opacity: 0.5;
-}
 
 .border-info {
   border: solid;
