--- a/src/app/user-view/user-view.component.html
+++ b/src/app/user-view/user-view.component.html
@@ -53,7 +53,7 @@
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
     <ng-container matColumnDef="expandedDetail">
       <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+        <div class="expanded-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
 
           <div class="border-info">
             <app-request-view [request]="element">
@@ -65,9 +65,9 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row" [class.example-expanded-row]="expandedElement === element"
+    <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="element-row" [class.example-expanded-row]="expandedElement === element"
       (click)="clickedRow(element) ">
     </tr>
-    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
   </table>
 </div>
