--- a/src/app/user-view/new-request/new-request.component.html
+++ b/src/app/user-view/new-request/new-request.component.html
@@ -17,7 +17,7 @@
       </mat-form-field>
 
       <mat-form-field class="col-6">
-        <input name="pacHourFrom" matInput placeholder="Start Hour"  [(ngModel)]="request.PACHourFrom" required>
+        <input name="pacHourFrom" matInput placeholder="Start Hour"  pattern="^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$" [(ngModel)]="request.PACHourFrom" required>
       </mat-form-field>
     </div>
 
@@ -29,7 +29,7 @@
       </mat-form-field>
 
       <mat-form-field class="col-6">
-        <input name="pacHourFrom" matInput placeholder="Finish Hour " [(ngModel)]="request.PACHourTo" required>
+        <input name="pacHourTo" matInput placeholder="Finish Hour " pattern="^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$" [(ngModel)]="request.PACHourTo" required>
       </mat-form-field>
     </div>
 
@@ -55,7 +55,8 @@
 
     <mat-list>
       <mat-list-item *ngFor="let attachment of request.Attachments; let index = index">
-          <a>{{attachment.fileName}}</a>
+          <a *ngIf="attachment.savedOnSharepoint; else elseBlock" (click)="openAttachment(attachment)">{{attachment.fileName}}</a>
+          <ng-template #elseBlock>{{attachment.fileName}}</ng-template>
         <span class="fill-space"></span>
         <button type="button" (click)="removeAttachment(index)" mat-icon-button>
           <mat-icon>clear</mat-icon>
