refactor of the component names

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<ui-view></ui-view>
+<div class="relative-container">
+    <app-loader></app-loader>
+    <ui-view></ui-view>
+</div>
